k8s-reactdepsvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
      - name: my-react-app
        image: dockersandheep/react-pipe:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-react-app
spec:
  selector:
    app: my-react-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: LoadBalancer
